[gd_scene load_steps=12 format=3 uid="uid://bas75hbmg3l78"]

[ext_resource type="Script" path="res://Scripts/barracks.gd" id="1_1bdfm"]
[ext_resource type="Texture2D" uid="uid://7bnjvljpbrg0" path="res://assets/barracks.png" id="2_s5ot0"]
[ext_resource type="Texture2D" uid="uid://bwgcgb8ueyueh" path="res://assets/building_cursor.png" id="3_02ru3"]
[ext_resource type="Texture2D" uid="uid://r8vww0weknh8" path="res://icon.svg" id="4_k0xuu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h875d"]
size = Vector2(24, 36)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7lppg"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.8, 0.8, 1)
border_blend = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_garye"]
size = Vector2(52, 81)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_74lvn"]
bg_color = Color(0.886275, 0.478431, 0, 0.356863)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mdnc8"]
bg_color = Color(0, 0.629749, 0.979766, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xb0bu"]
bg_color = Color(1, 0.305882, 0.211765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mtofj"]
bg_color = Color(0.346066, 0.701781, 0, 1)

[node name="pump" type="StaticBody2D" node_paths=PackedStringArray("fan", "age_bar", "increase_button", "decrease_button", "production_rate_bar", "select", "age_label", "select_value")]
input_pickable = true
script = ExtResource("1_1bdfm")
is_pump = true
fan = NodePath("Icon")
age_bar = NodePath("agebar")
increase_button = NodePath("increase")
decrease_button = NodePath("decrease")
production_rate_bar = NodePath("ProgressBar")
select = NodePath("Box")
age_label = NodePath("Label")
select_value = NodePath("Label2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_h875d")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.7719, 2.18514e-05, 0.548818, 1)
y_sort_enabled = true
texture = ExtResource("2_s5ot0")

[node name="Box" type="Panel" parent="."]
offset_left = -16.0
offset_top = -28.0
offset_right = 16.0
offset_bottom = 30.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_7lppg")

[node name="Label" type="Label" parent="."]
offset_left = 26.0
offset_top = -41.0
offset_right = 95.0
offset_bottom = -18.0
theme_override_font_sizes/font_size = 7
text = "Age : 100"

[node name="BuildingCursor" type="Sprite2D" parent="."]
visible = false
y_sort_enabled = true
position = Vector2(-47, -11)
texture = ExtResource("3_02ru3")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_garye")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 19.0
offset_top = 29.0
offset_right = 72.0
offset_bottom = 43.0
rotation = 4.71239
theme_override_font_sizes/font_size = 10
theme_override_styles/background = SubResource("StyleBoxFlat_74lvn")
theme_override_styles/fill = SubResource("StyleBoxFlat_mdnc8")

[node name="increase" type="Button" parent="."]
offset_left = -41.0
offset_top = -33.0
offset_right = -24.0
offset_bottom = -2.0
text = "^"

[node name="decrease" type="Button" parent="."]
offset_left = -41.0
offset_top = 1.0
offset_right = -24.0
offset_bottom = 32.0
text = "v"

[node name="agebar" type="ProgressBar" parent="."]
offset_left = 22.0
offset_top = -28.0
offset_right = 67.0
offset_bottom = -16.0
rotation = -3.14159
theme_override_font_sizes/font_size = 8
theme_override_styles/background = SubResource("StyleBoxFlat_xb0bu")
theme_override_styles/fill = SubResource("StyleBoxFlat_mtofj")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(0, 17)
scale = Vector2(0.152344, 0.152344)
texture = ExtResource("4_k0xuu")

[node name="Label2" type="Label" parent="."]
offset_left = -21.0
offset_top = -74.0
offset_right = 19.0
offset_bottom = -51.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="button_down" from="increase" to="." method="_on_increase_button_down"]
[connection signal="button_down" from="decrease" to="." method="_on_decrease_button_down"]
